src/test/deca/context/invalid/created/test-a-1.deca
class A{
    int x;
    void move(){
        return x;
    }
}